--- a/src/components/pages/TasksPage.scss
+++ b/src/components/pages/TasksPage.scss
@@ -1,3 +1,14 @@
 .task_page-container {
     margin: 50px;
 }
+
+.button_sign-out {
+    position: absolute;
+    right: 50px;
+    top: 55px;
+    padding: 10px;
+    border: none;
+    background: none;
+    color: tomato;
+    font-size: 20px;
+}
