--- a/src/components/pages/LogInPage.scss
+++ b/src/components/pages/LogInPage.scss
@@ -1,3 +1,16 @@
 .login_container {
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    width: 340px;
+}
+
+.login-reg {
+    padding: 15px;
+    border: none;
+    background-color: lightblue;
+    margin: 0 20px 0 0;
 }
