--- a/src/components/pages/TasksPage.scss
+++ b/src/components/pages/TasksPage.scss
@@ -12,3 +12,9 @@
     color: tomato;
     font-size: 20px;
 }
+
+// button:hover {
+//     transform: scale(1.03);
+//     box-shadow: 3px 3px 5px lightgray;
+//     cursor: pointer;
+// }
