--- a/src/components/ToDoList/ItemTask/CreatingEditingPage.scss
+++ b/src/components/ToDoList/ItemTask/CreatingEditingPage.scss
@@ -10,15 +10,60 @@
     content: '< ';
 }
 
-.button_add-edit {
+.item-name {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.button_edit {
+    display: inline-block;
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    right: 50px;
     bottom: 60px;
-    width: 80%;
+    width: 50%;
     height: 50px;
     background-color: green;
     color: white;
     border: none;
     border-radius: 5px;
+}
+
+.button_add {
+    display: inline-block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 60px;
+    width: 70%;
+    height: 50px;
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+.button_done {
+    display: inline-block;
+    position: absolute;
+    left: 70px;
+    background: none;
+    bottom: 60px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    font-size: 35px;
+}
+
+.button_delete {
+    display: inline-block;
+    position: absolute;
+    left: 150px;
+    background: none;
+    bottom: 60px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    font-size: 35px;
 }
