--- a/src/components/ToDoList/ToDoList.scss
+++ b/src/components/ToDoList/ToDoList.scss
@@ -8,7 +8,7 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: 60px;
-    width: 80%;
+    width: 70%;
     height: 50px;
     background-color: tomato;
     color: white;
@@ -22,6 +22,12 @@
 }
 
 .item_name {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 500;
+}
+
+.task_li {
+    margin: 1px 0;
+    padding: 10px;
+    border-bottom: 1px solid lightgray;
 }
