--- a/src/components/FormInput/FormInput.scss
+++ b/src/components/FormInput/FormInput.scss
@@ -91,6 +91,8 @@ input[type='checkbox'] {
 }
 
 textarea {
-    width: 95%;
+    width: 310px;
     height: 200px;
+    padding: 9px;
+    border-radius: 5px;
 }
