--- a/src/components/ToDoList/ItemTask/CreatingEditingPage.scss
+++ b/src/components/ToDoList/ItemTask/CreatingEditingPage.scss
@@ -2,12 +2,8 @@
     border: none;
     background: none;
     font-size: 25px;
-    font-weight: bold;
+    font-weight: 500;
     display: block;
-}
-
-.button_back::before {
-    content: '< ';
 }
 
 .item-name {
