--- a/src/components/calendar/day/Day.scss
+++ b/src/components/calendar/day/Day.scss
@@ -19,6 +19,12 @@
     font-weight: bold;
 }
 
+.day:hover,
+.today:hover { 
+    background-color: rgba(255, 99, 71, 0.4);
+    cursor: pointer;
+}
+
 .day > div,
 .today > div {
     width: 100%;
