Fix code style adaptive

--- a/src/components/calendar/day/Day.scss
+++ b/src/components/calendar/day/Day.scss
@@ -3,7 +3,7 @@
     flex-basis: 80px;
     height: 100px;
     margin: 0 20px;
-    border: 1px solid lightgray;
+    border: 1px solid #d3d3d3;
     border-radius: 15px;
 }
 
