--- a/src/components/ToDoList/CreatingEditingPage.scss
+++ b/src/components/ToDoList/CreatingEditingPage.scss
@@ -42,6 +42,10 @@
     background-color: green;
     color: white;
     border: none;
+
+    @media screen and (max-width: 500px) {
+        width: 80px;
+    }
 }
 
 .button_add {
@@ -63,6 +67,10 @@
     height: 50px;
     border: none;
     font-size: 35px;
+
+    @media screen and (max-width: 350px) {
+        left: 50px;
+    }
 }
 
 .button_delete {
@@ -73,4 +81,8 @@
     height: 50px;
     border: none;
     font-size: 35px;
+
+    @media screen and (max-width: 350px) {
+        left: 100px;
+    }
 }
