--- a/src/components/ToDoList/ToDoList.scss
+++ b/src/components/ToDoList/ToDoList.scss
@@ -14,6 +14,17 @@
     color: white;
     border: none;
     border-radius: 5px;
+
+    @media screen and (max-width: 500px) {
+        left: 80%;
+        width: 60px;
+        height: 60px;
+        bottom: 50px;
+        z-index: 5;
+        border-radius: 30px;
+        box-shadow: 5px 5px 5px lightgrey;
+        
+    }
 }
 
 #add_task:hover {
